# rpg_dvs_evo_open

./: .gitignore  Doxygen  README.md  SOURCE CODE LICENSE AGREEMENT_evo.doc  dependencies.yaml  install.sh
docs/: Bootstrapper_8hpp_source.html  EventsFramesBootstrapper_8hpp_source.html  FrontoPlanarBootstrapper_8hpp_source.html  abstract__bundle__adjustment_8h_source.html  annotated.html  atan__distortion_8h_source.html  backend__factory_8h_source.html  backend__interface_8h_source.html  backend__optimizer_8h_source.html  backend__types_8h_source.html  backend__visualizer_8h_source.html  backtrace_8h_source.html  batch__worker_8h_source.html  blender__utils_8h_source.html  callback__host_8h_source.html  camera-yaml-serialization_8h_source.html  camera_8h_source.html  camera_8hpp_source.html  camera__factory_8h_source.html  camera__fwd_8h_source.html  camera__geometry_8h_source.html  camera__geometry_8hpp_source.html  camera__geometry__base_8h_source.html  camera__geometry__base_8hpp_source.html  cameras_8h_source.html  classCamerasTest-members.html  classCamerasTest.html  classCamerasTest__coll__graph.map  classCamerasTest__coll__graph.md5  classCamerasTest__inherit__graph.md5  classDvsReconstruction-members.html  classDvsReconstruction.html  classDvsReconstruction__coll__graph.map  classDvsReconstruction__coll__graph.md5  classDvsTrackingNodelet-members.html  classDvsTrackingNodelet.html  classDvsTrackingNodelet__coll__graph.map  classDvsTrackingNodelet__coll__graph.md5  classDvsTrackingNodelet__inherit__graph.map  classDvsTrackingNodelet__inherit__graph.md5  (+1239 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+69 more)
dvs_bootstrapping/: CMakeLists.txt  package.xml
dvs_bootstrapping/include/: motion_correction.hpp
dvs_bootstrapping/include/dvs_bootstrapping/: Bootstrapper.hpp  EventsFramesBootstrapper.hpp  FrontoPlanarBootstrapper.hpp
dvs_bootstrapping/src/: Bootstrapper.cpp  EventsFramesBootstrapper.cpp  FrontoPlanarBootstrapper.cpp  dvs_bootstrapping_ef_ros.cpp  dvs_bootstrapping_frontoplanar_ros.cpp  motion_correction.cpp  pose_to_tf.py
dvs_mapping/: CMakeLists.txt  dvs_mapping_nodelet.xml  package.xml
dvs_mapping/include/dvs_depth_from_defocus/: depth_defocus_node.hpp  depth_vector.hpp  dvs_mapping_nodelet.h
dvs_mapping/src/: depth_defocus_node.cpp  dvs_mapping_nodelet.cpp  dvs_mapping_ros.cpp  tf_broadcaster.py  trigger_map_expansion.py
dvs_mapping/test/: test_depth_vector.cpp  test_median_filter.cpp
dvs_reconstruction/: CMakeLists.txt  package.xml
dvs_reconstruction/include/dvs_reconstruction/: mosaic.hpp
dvs_reconstruction/include/dvs_reconstruction/poisson_solver/: laplace.h
dvs_reconstruction/src/: dvs_reconstruction_ros.cpp  mosaic.cpp
dvs_reconstruction/src/poisson_solver/: laplace.cpp
dvs_slam_msgs/: CMakeLists.txt  package.xml
dvs_slam_msgs/msg/: VoxelGrid.msg
dvs_tracking/: CMakeLists.txt  dvs_tracking_nodelet.xml  package.xml
dvs_tracking/include/dvs_tracking/: dvs_tracking_nodelet.h  lk_se3.hpp  tracker.hpp  weight_functions.hpp
dvs_tracking/launch/: desk.launch  flyingroom.launch  live.launch
dvs_tracking/parameters/: svo_desk.yaml  svo_live.yaml
dvs_tracking/parameters/calib/: DAVIS-evo.yaml  DAVIS-ijrr.yaml
dvs_tracking/parameters/calib/ncamera/: DAVIS-evo.yaml  DAVIS-ijrr.yaml
dvs_tracking/rviz/: live.rviz  rosbag.rviz
dvs_tracking/src/: dvs_tracking_nodelet.cpp  dvs_tracking_ros.cpp  lk_se3.cpp  tracker.cpp
evo_utils/: CMakeLists.txt  package.xml  setup.py
evo_utils/include/evo_utils/: camera.hpp  geometry.hpp  interpolation.hpp  main.hpp
evo_utils/include/rpg_common_ros/: params_helper.hpp
evo_utils/src/: camera.cpp  utils_geometry.cpp
evo_utils/src/evo_utils/: display_DSI.py  publish_confidence.py  select_exposure_DAVIS.py  snakify.py  tf_to_camera_markers.py
rqt_evo/: CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
rqt_evo/resource/: widget.ui
rqt_evo/scripts/: off_the_quad.sh  rqt_evo
rqt_evo/src/rqt_evo/: evo.py  evo_widget.py
svo/: CMakeLists.txt  package.xml
svo/include/svo/: abstract_bundle_adjustment.h  config.h.in  frame_handler_array.h  frame_handler_base.h  frame_handler_mono.h  frame_handler_stereo.h  global.h  imu_handler.h  map.h  reprojector.h
svo/src/: config.cpp  frame_handler_array.cpp  frame_handler_base.cpp  frame_handler_mono.cpp  frame_handler_stereo.cpp  imu_handler.cpp  initialization.cpp  io.cpp  map.cpp  patch_normal.cpp  pose_optimizer.cpp  reprojector.cpp  stereo_triangulation.cpp
svo_backend/: CMakeLists.txt  dependencies.yaml  package.xml
svo_backend/include/svo/backend/: backend_interface.h  backend_optimizer.h  backend_types.h  graph_manager.h  smart_factors_fwd.h
svo_backend/src/: backend_interface.cpp  backend_optimizer.cpp  graph_manager.cpp  smart_factors.cpp
svo_cmake/cmake/Modules/: Gtsam.cmake  SlidingWindowEstimator.cmake  SvoSetup.cmake
svo_common/: CMakeLists.txt
svo_common/include/svo/common/: camera_fwd.h  frame.h  occupancy_grid_2d.h  point.h  types.h
svo_common/src/: frame.cpp  point.cpp
svo_direct/: CMakeLists.txt
svo_direct/include/svo/direct/: depth_filter.h  feature_detection.h  feature_detection_types.h  feature_detection_utils.h  (+2 more)
svo_direct/src/: depth_filter.cpp  feature_detection.cpp  feature_detection_utils.cpp  matcher.cpp
svo_img_align/: CMakeLists.txt  package.xml
svo_img_align/src/: sparse_img_align.cpp
svo_ros/: CMakeLists.txt  package.xml  rviz_ba.rviz
svo_ros/include/svo_ros/: csv_dataset_reader.h  svo_factory.h  svo_interface.h  visualizer.h
svo_ros/src/: benchmark_node.cpp  svo_factory.cpp  svo_interface.cpp  visualizer.cpp
svo_vikit/vikit_ros/src/: output_helper.cpp
(+3 files in other folders)
