<?xml version="1.0"?>
<package format="2">
  <name>dvs_bootstrapping</name>
  <version>0.0.0</version>
  <description>The dvs_bootstrapping package</description>
  <maintainer email="antonio.terpin@gmail.com">Antonio Terpin</maintainer>
  <author email="antonio.terpin@gmail.com">Antonio Terpin</author>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>camera_info_manager</depend>
  <depend>dvs_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>tf_conversions</depend>
  <depend>evo_utils</depend>
  <depend>cv_bridge</depend>

</package>
