<?xml version="1.0"?>
<package format="2">
  <name>dvs_tracking</name>
  <version>0.0.1</version>
  <description>
    Implementation of DVS tracker
  </description>
  <maintainer email="mail@timo-horstschaefer.de">Timo Horstschaefer</maintainer>
  <author>Timo Horstschaefer</author>
  <license>tbd</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>nodelet</depend>
  <depend>glog_catkin</depend>
  <depend>gflags_catkin</depend>
  <depend>image_geometry</depend>
  <depend>camera_info_manager</depend>
  <depend>pcl_ros</depend>
  <depend>cv_bridge</depend>
  <depend>tf_conversions</depend>
  <depend>eigen_conversions</depend>
  <depend>image_transport</depend>
  <depend>minkindr</depend>
  <depend>dvs_msgs</depend>
  <depend>dvs_slam_msgs</depend>
  <depend>dvs_reconstruction</depend>
  <depend>evo_utils</depend>
  <depend>svo_ros</depend>
  <depend>dvs_mapping</depend>
  <depend>dvs_bootstrapping</depend>
  <depend>dvs_renderer</depend>
  <depend>vikit_py</depend>
  <depend>dvs_ros_driver</depend>
  <depend>davis_ros_driver</depend>
  <depend>rqt_evo</depend>
  <depend>rqt_svo</depend>

  <export>
    <nodelet plugin="${prefix}/dvs_tracking_nodelet.xml"/>
  </export>

  </package>
