<?xml version="1.0"?>
<package format="2">
  <name>svo_backend</name>
  <version>0.0.0</version>
  <description>The svo_gtsam package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="cforster@todo.todo">cforster</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>svo</depend>
  <depend>svo_cmake</depend>
  <depend>svo_common</depend>
  <depend>vikit_common</depend>
  <depend>eigen_catkin</depend>
  <depend>gtsam_catkin</depend>

</package>
